<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <include
        android:id="@+id/include"
        layout="@layout/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<android.support.constraint.Guideline-->
            <!--android:id="@+id/guideline"-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--app:layout_constraintGuide_percent=".5" />-->


            <android.support.constraint.ConstraintLayout
                android:id="@+id/login_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="72dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/welcome_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:lineHeight="40sp"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/welcome_to_naryana_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toTopOf="@+id/login_instruction_text_tv"
                    app:layout_constraintStart_toStartOf="@+id/login_instruction_text_tv"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/login_instruction_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="30dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:text="@string/login_instruction_text"
                    android:textColor="@color/primaryColorGray"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_registration_admission_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/activity_registration_admission_et"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_text_tv" />

                <EditText
                    android:id="@+id/activity_registration_admission_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/admission_number"
                    app:layout_constraintBottom_toTopOf="@+id/activity_registration_password_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/login_instruction_text_tv"
                    app:layout_constraintTop_toBottomOf="@+id/login_instruction_text_tv" />

                <EditText
                    android:id="@+id/activity_registration_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:focusable="false"
                    android:hint="@string/enter_password"
                    app:layout_constraintBottom_toTopOf="@+id/forgot_password_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_admission_et" />


                <TextView
                    android:id="@+id/forgot_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primaryColorBlue"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_registration_login_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_password_et" />

                <Button
                    android:id="@+id/activity_registration_login_btn"
                    style="@style/Buton.Colored"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/activity_registration_admission_et"
                    app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv" />

                <TextView
                    android:id="@+id/primary_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="Primary Colour"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_registration_login_btn" />

            </android.support.constraint.ConstraintLayout>

            <!--<android.support.constraint.ConstraintLayout-->
            <!--android:id="@+id/view_pager_layout"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/guideline"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent">-->

            <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/viewpager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="400dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

            <!--<LinearLayout-->
            <!--android:id="@+id/layoutDots"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/viewpager" />-->
            <!--</android.support.constraint.ConstraintLayout>-->


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>